--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,19 @@
+body {
+  margin : 0;
+}
+video {
+  width : 100%;
+}
+    video {
+      object-fit: cover;
+    }
 
+    @media (min-width: 1000px) {
+      video {
+        height: 100%;
+      }
+    }
+.bg {
+  position : absolute;
+  background : url('https://s.pstatic.net/static/www/mobile/edit/2017/1101/mobile_151652735269.jpg') center repeat-no center;
+}
